[gd_scene load_steps=3 format=3 uid="uid://dv25mfkf2oaoa"]

[ext_resource type="Script" path="res://NewAITest/ai_node.gd" id="1_c2xv5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xmgc4"]
radius = 128.0

[node name="AI_Node" type="Node2D"]
script = ExtResource("1_c2xv5")

[node name="NavAG" type="NavigationAgent2D" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_xmgc4")

[node name="Wallchecker" type="RayCast2D" parent="."]
target_position = Vector2(64, 2.08165e-12)

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
